--- a/src/ece.dproj
+++ b/src/ece.dproj
@@ -20,7 +20,7 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DCC_UnitSearchPath>.\MsAsKernal\src;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+			<DCC_UnitSearchPath>.\MsAsKernal\src;.\..\..\vForth\src;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
 			<DCC_ExeOutput>..\bin</DCC_ExeOutput>
 			<DCC_DcuOutput>__temp</DCC_DcuOutput>
 			<DCC_DependencyCheckOutputName>..\bin\ece.exe</DCC_DependencyCheckOutputName>
