--- a/src/modules/hexview.dproj
+++ b/src/modules/hexview.dproj
@@ -1,7 +1,7 @@
 ﻿	<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 		<PropertyGroup>
 			<ProjectGuid>{C264D286-7959-42BA-97D8-13DB5AC3C48F}</ProjectGuid>
-			<MainSource>autospace.dpr</MainSource>
+			<MainSource>hexview.dpr</MainSource>
 			<Config Condition="'$(Config)'==''">Debug</Config>
 			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
 			<ProjectVersion>12.0</ProjectVersion>
@@ -20,9 +20,11 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
+			<DCC_ExeOutput>..\..\bin\modules</DCC_ExeOutput>
+			<DCC_UnitSearchPath>..\vforth\src;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
 			<DCC_ImageBase>00400000</DCC_ImageBase>
 			<DCC_E>false</DCC_E>
-			<DCC_DependencyCheckOutputName>autospace.dll</DCC_DependencyCheckOutputName>
+			<DCC_DependencyCheckOutputName>..\..\bin\modules\hexview.dll</DCC_DependencyCheckOutputName>
 			<DCC_UnitAlias>WinTypes=Windows;WinProcs=Windows;$(DCC_UnitAlias)</DCC_UnitAlias>
 			<DCC_Platform>x86</DCC_Platform>
 			<DCC_S>false</DCC_S>
@@ -41,10 +43,11 @@
 			<DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
 		</PropertyGroup>
 		<ItemGroup>
-			<DelphiCompile Include="autospace.dpr">
+			<DelphiCompile Include="hexview.dpr">
 				<MainSource>MainSource</MainSource>
 			</DelphiCompile>
 			<DCCReference Include="..\Iece.pas"/>
+			<DCCReference Include="HexViewDoc.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
@@ -64,13 +67,13 @@
 			<BorlandProject>
 				<Delphi.Personality>
 					<Source>
-						<Source Name="MainSource">autospace.dpr</Source>
+						<Source Name="MainSource">hexview.dpr</Source>
 					</Source>
 					<Parameters>
 						<Parameters Name="UseLauncher">False</Parameters>
 						<Parameters Name="LoadAllSymbols">True</Parameters>
 						<Parameters Name="LoadUnspecifiedSymbols">False</Parameters>
-						<Parameters Name="HostApplication">..\ece.exe</Parameters>
+						<Parameters Name="HostApplication">..\..\bin\ece.exe</Parameters>
 						<Parameters Name="DebugCWD">C:\Documents and Settings\Евгений.EVGENY.000\Рабочий стол\ece</Parameters>
 					</Parameters>
 					<VersionInfo>
