--- a/src/ece.dproj
+++ b/src/ece.dproj
@@ -2,7 +2,7 @@
 		<PropertyGroup>
 			<ProjectGuid>{5533C9C1-271E-4BBD-BD0D-56B7CDAF3E23}</ProjectGuid>
 			<MainSource>ece.dpr</MainSource>
-			<Config Condition="'$(Config)'==''">Debug</Config>
+			<Config Condition="'$(Config)'==''">Release</Config>
 			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
 			<ProjectVersion>12.0</ProjectVersion>
 		</PropertyGroup>
@@ -57,6 +57,7 @@
 			<DCCReference Include="eceSynParser.pas"/>
 			<DCCReference Include="eceConsoleWindow.pas"/>
 			<DCCReference Include="IeceObj.pas"/>
+			<DCCReference Include="EceAppUI.pas"/>
 			<None Include="syn\vb.xml"/>
 			<None Include="ModelSupport_ece\Ece\default.txvpck"/>
 			<None Include="ModelSupport_ece\default.txaPackage"/>
