--- a/trunk/src/ece.dproj
+++ b/trunk/src/ece.dproj
@@ -59,6 +59,10 @@
 			<DCCReference Include="IeceObj.pas"/>
 			<DCCReference Include="EceAppUI.pas"/>
 			<DCCReference Include="eceConfig.pas"/>
+			<DCCReference Include="eceFiniteAutomatons.pas"/>
+			<DCCReference Include="eceFinateAutomatonClass.pas"/>
+			<DCCReference Include="eceFinateAutomatonSetClass.pas"/>
+			<DCCReference Include="eceFinateAutomatonStateClass.pas"/>
 			<None Include="syn\vb.xml"/>
 			<None Include="ModelSupport_ece\Ece\default.txvpck"/>
 			<None Include="ModelSupport_ece\default.txaPackage"/>
