--- a/src/ece.dproj
+++ b/src/ece.dproj
@@ -59,10 +59,9 @@
 			<DCCReference Include="IeceObj.pas"/>
 			<DCCReference Include="EceAppUI.pas"/>
 			<DCCReference Include="eceConfig.pas"/>
-			<DCCReference Include="eceFiniteAutomatons.pas"/>
-			<DCCReference Include="eceFiniteAutomatonClass.pas"/>
-			<DCCReference Include="eceFiniteAutomatonSetClass.pas"/>
-			<DCCReference Include="eceFiniteAutomatonStateClass.pas"/>
+			<DCCReference Include="eceFiniteAutomatons.pas">
+				<Form>/ {$IFNDEF FPC},</Form>
+			</DCCReference>
 			<None Include="syn\vb.xml"/>
 			<None Include="ModelSupport_ece\Ece\default.txvpck"/>
 			<None Include="ModelSupport_ece\default.txaPackage"/>
